namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-sentence-plan-review/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-sentence-plan-review
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "review"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-sentence-plan-notifications"
    cloud-platform.justice.gov.uk/application: "Sentence Plan"
    cloud-platform.justice.gov.uk/owner: "hmpps-sentence-planning: sentence-plan-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/team-name: "hmpps-sentence-planning"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-sentence-plan,https://github.com/ministryofjustice/hmpps-sentence-plan-ui"
